[package]
name = "xiao-rp2040-pio-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.6"
rp2040-hal = "0.6.0"
seeeduino-xiao-rp2040 = "0.2.0"
panic-halt = "0.2.0"
embedded-hal = "0.2.7"
cortex-m-rt = "0.7"
rp2040-boot2 = "0.2.0"
pio-proc = "0.2"
pio = "0.2"
fugit = "0.3.6"
nb = "1.0.0"
